--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.app {
+  min-width: 600px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gameBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.grid-box {
+  background-color: red;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.btn button {
+  background-color: red;
+  padding: 10px;
+  box-shadow: 0 0 5px white;
+  width: 100px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn button + button {
+  margin-left: 10px;
+}
+.btn button:hover {
+  box-shadow: 0 0 0 black;
 }
